Change spacing of default room button and made it a new color. resolves #17

--- a/client/src/app/home/home.component.css
+++ b/client/src/app/home/home.component.css
@@ -29,7 +29,7 @@
   transition: bottom 1s;
 }
 
-.mat-expansion-panel, .mat-card {
+.mat-expansion-panel, .mat-card, .defaultRoomButton {
   border-radius: 20px;
 }
 
@@ -41,4 +41,7 @@
     right: 40px;
     bottom: 25px;
   }
+}
+.defaultRoomButton{
+
 }
